adicionar novo lugar funcionando

--- a/myApp2/src/app/home/home.page.html
+++ b/myApp2/src/app/home/home.page.html
@@ -1,5 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <!--botao de voltar-->
+    <ion-buttons>
+      <ion-back-button ></ion-back-button>
+    </ion-buttons>
     <ion-title>
       Ola mundo
     </ion-title>
