alterado home e iniciado httpClient(nao ok)

--- a/myApp2/src/app/home/home.page.html
+++ b/myApp2/src/app/home/home.page.html
@@ -5,17 +5,22 @@
       <ion-back-button ></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Ola mundo
+      Olá mundo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <h2>Segundo app</h2>
+  <h3>Segundo app</h3>
+  <ion-list>
+    <ion-card *ngFor="let f of fotos">
+      <img [src]="f.thumbnailUrl" >
+      <ion-card-content>
+        {{f.title}}
+      </ion-card-content>
+      <ion-card-content>
+        {{f.albumId}}
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
 </ion-content>
