--- a/myApp2/src/app/lugares/lugares.page.html
+++ b/myApp2/src/app/lugares/lugares.page.html
@@ -1,7 +1,12 @@
 <ion-header>
   <ion-toolbar color='success'>
     <ion-title>lugares</ion-title>
-    
+    <!--botao de ir para home-->
+    <ion-buttons slot="start">
+      <ion-button (click)="irParaHome()">
+        <ion-icon name="globe"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
