--- a/myApp3/src/app/tabs/tabs.page.html
+++ b/myApp3/src/app/tabs/tabs.page.html
@@ -11,15 +11,12 @@
       <ion-label>Tab 2</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
-    </ion-tab-button>
-    <!--pagina feed-->
-    <ion-tab-button tab="feed">
+    <!--pagina inicial-->
+    <ion-tab-button tab="inicial">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Feed</ion-label>
+      <ion-label>Início</ion-label>
     </ion-tab-button>
+  
   </ion-tab-bar>
 
 </ion-tabs>
