primeiro componente  com propriedade(app-header)

--- a/tutorial3/src/app/pages/action-sheet/action-sheet.page.html
+++ b/tutorial3/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-  
-      <ion-back-button defaultHref="inicio" slot="start" ></ion-back-button>
-  
-    <ion-title>action-sheet</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo= "pagina action"></app-header>
 
 <ion-content>
 
