--- a/tutorial3/src/app/pages/alert/alert.page.html
+++ b/tutorial3/src/app/pages/alert/alert.page.html
@@ -1,14 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="inicio"
-      color="danger"
-      ></ion-back-button>
-    </ion-buttons>
-    <ion-title>alert</ion-title>
-  </ion-toolbar>
-</ion-header>
+  <!--
+  importar ComponentsModule em alert.modules.ts
+  (acho q nao precisa)importar ComponentsModule em app.module.ts
+  export do header component em components.module.ts
+-->
+<app-header titulo= "pagina alert"></app-header>
 
 <ion-content>
-
+  <h3>alert page</h3>
 </ion-content>
