--- a/tutorial3/src/app/components/header/header.component.html
+++ b/tutorial3/src/app/components/header/header.component.html
@@ -1,3 +1,11 @@
-<p>
-  header works!
-</p>
+<!--importar os elementos ionic em components.module.ts -->
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="inicio"
+      color="danger"
+      ></ion-back-button>
+    </ion-buttons>
+    <ion-title text-capitalize >{{titulo}}</ion-title>
+  </ion-toolbar>
+</ion-header>
