primeiro ActionSheet ok

--- a/tutorial3/src/app/pages/action-sheet/action-sheet.page.html
+++ b/tutorial3/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,9 @@
+<!--componente criado-->
 <app-header titulo= "pagina action"></app-header>
 
 <ion-content>
-  <h3 >lalaalala</h3>
+
+  <ion-button (click)="presentActionSheet()" expand="full" shape="round">
+    Click me
+  </ion-button>
 </ion-content>
