--- a/tutorial3/src/app/pages/inicio/inicio.page.html
+++ b/tutorial3/src/app/pages/inicio/inicio.page.html
@@ -17,7 +17,8 @@
 
 
 
-
+  <!--teste de botoes-->
+  <!--
   <ion-buttons>
     <ion-button routerLink="/alert" >
       Alert
@@ -32,4 +33,5 @@
   <ion-button  routerLink="/action-sheet" >
     Action-sheet
   </ion-button>
+  -->
 </ion-content>
