--- a/tutorial3/src/global.scss
+++ b/tutorial3/src/global.scss
@@ -24,3 +24,12 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+/*
+-.vermelho span - escrita ficar em vermelho
+-.vermelho .sc-ion-action-sheet-md - icone ficar vermelho*/
+.vermelho span, .vermelho .sc-ion-action-sheet-md {
+    //color:red !important;
+    color:red;
+}
