exemplo de Alert ok

--- a/tutorial3/src/app/pages/action-sheet/action-sheet.page.html
+++ b/tutorial3/src/app/pages/action-sheet/action-sheet.page.html
@@ -2,8 +2,7 @@
 <app-header titulo= "pagina action"></app-header>
 
 <ion-content>
-
   <ion-button (click)="presentActionSheet()" expand="full" shape="round">
-    Click me
+    Mostrar ActionSheet
   </ion-button>
 </ion-content>
