--- a/tutorial3/src/app/pages/alert/alert.page.html
+++ b/tutorial3/src/app/pages/alert/alert.page.html
@@ -3,8 +3,13 @@
   (acho q nao precisa)importar ComponentsModule em app.module.ts
   export do header component em components.module.ts
 -->
-<app-header titulo= "pagina alert"></app-header>
+<app-header [titulo]= "nome || 'pagina alert'"></app-header>
 
 <ion-content>
-  <h3>alert page</h3>
+  <ion-button (click)="presentAlert()" expand="block">
+    Mostrar Alert
+  </ion-button>
+  <ion-button color="secondary" (click)="presentAlertPrompt()" expand="block">
+    Mostrar Alert Prompt
+  </ion-button>
 </ion-content>
