criacao de variaveis de cores globais em scss -ok

--- a/tutorial3/src/app/pages/fab/fab.page.html
+++ b/tutorial3/src/app/pages/fab/fab.page.html
@@ -23,8 +23,12 @@
       <ion-fab-button><ion-icon name="logo-angular"></ion-icon></ion-fab-button>
     </ion-fab-list>
     <ion-fab-list side="start">
-      <ion-fab-button><ion-icon name="logo-ionic"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="logo-angular"></ion-icon></ion-fab-button>
+      <!--color='criadodois' eh a cor criada por mim
+      estah em variables.scss-->
+      <ion-fab-button color="criadodois"><ion-icon name="logo-ionic"></ion-icon></ion-fab-button>
+      <!--color='criado' eh a cor criada por mim
+      estah em variables.scss-->
+      <ion-fab-button color="criado"><ion-icon name="logo-angular"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
