ion-grid -ok, header translucent -nao funcionou

--- a/tutorial3/src/app/components/header/header.component.html
+++ b/tutorial3/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
   ion-no-border - remove a linha q separa o header do body
 
 -->
-<ion-header class="ion-no-border">
+<ion-header class="ion-no-border" translucent="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="inicio"
