--- a/tutorial3/src/app/pages/inicio/inicio.page.html
+++ b/tutorial3/src/app/pages/inicio/inicio.page.html
@@ -21,7 +21,7 @@
 
 
 
-    <ion-title>inicio</ion-title>
+    <ion-title color="danger">inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -30,8 +30,10 @@
   <ion-list>
     <!--detail deixa  a mostra um indicador de que é
     clicavel, no android, no ios é padrao esse indicador-->
-    <ion-item *ngFor="let c of componentes" [routerLink]="c.irPara" detail>
-      <ion-icon slot="start" [name]="c.icon"></ion-icon>
+    <ion-item *ngFor="let c of componentes | async" 
+              [routerLink]="c.irPara" 
+              detail>
+      <ion-icon color="danger" slot="start" [name]="c.icon"></ion-icon>
       <ion-label>{{c.nome}}</ion-label>
     </ion-item>
   </ion-list>
