exemplo pagina modal -ok

--- a/tutorial3/src/app/pages/load/load.page.html
+++ b/tutorial3/src/app/pages/load/load.page.html
@@ -1,5 +1,5 @@
 <!--
-  importar ComponentsModule em alert.modules.ts
+  importar ComponentsModule em load.modules.ts
   (acho q nao precisa)importar ComponentsModule em app.module.ts
   export do header component em components.module.ts
 -->
